--- a/front/package.json
+++ b/front/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.5",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-pwa": "^0.14.7",
+    "workbox-window": "^6.5.4"
   }
 }
